Fixed matplotlib warning.

--- a/notebooks/Advection.ipynb
+++ b/notebooks/Advection.ipynb
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a matplotlib figure and add labels to each axis. Plots will appear in this figure. A warning may appear under the figure since no labels have been created. \n",
+    "Create a matplotlib figure and add labels to each axis. Plots will appear in this figure. \n",
     "\n",
     "**Note**: You can always run this cell again to clear the figure."
    ]
@@ -87,8 +87,7 @@
    "source": [
     "plt.figure(0)\n",
     "plt.xlabel('$x$')\n",
-    "plt.ylabel('$u(x,t)$')\n",
-    "plt.legend()"
+    "plt.ylabel('$u(x,t)$')"
    ]
   },
   {
@@ -113,11 +112,11 @@
     "plt.figure(0)\n",
     "\n",
     "# Assign the corresponding values to the following variables\n",
-    "a = \n",
-    "L =\n",
-    "n = \n",
+    "a =\n",
+    "L = \n",
+    "n =  \n",
     "dt = \n",
-    "tf = \n",
+    "tf =\n",
     "\n",
     "advection_upwind(a, L, n, dt, tf)"
    ]
@@ -158,8 +157,7 @@
    "source": [
     "plt.figure(1)\n",
     "plt.xlabel('$x$')\n",
-    "plt.ylabel('$u(x,t)$')\n",
-    "plt.legend()"
+    "plt.ylabel('$u(x,t)$')"
    ]
   },
   {
@@ -193,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
