--- a/notebooks/Diffusion.ipynb
+++ b/notebooks/Diffusion.ipynb
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a matplotlib figure and add labels to each axis. Plots will appear in this figure. A warning may appear under the figure since no labels have been created. \n",
+    "Create a matplotlib figure and add labels to each axis. Plots will appear in this figure.\n",
     "\n",
     "**Note**: You can always run this cell again to clear the figure."
    ]
@@ -89,8 +89,7 @@
    "source": [
     "plt.figure(0)\n",
     "plt.xlabel('$x$')\n",
-    "plt.ylabel('$u(x,t)$')\n",
-    "plt.legend()"
+    "plt.ylabel('$u(x,t)$')"
    ]
   },
   {
@@ -101,7 +100,7 @@
     "   - ``b``: The diffusion coefficient equal to ``1e-2``,\n",
     "   - ``L``: The domain length equal to ``1``,\n",
     "   - ``n``: The number of grid points equal to ``10``,\n",
-    "   - ``dt``: The time step size equal to ``0.01``,\n",
+    "   - ``dt``: The time step size equal to ``0.001``,\n",
     "   - ``tf``: The final time equal to ``5``."
    ]
   },
@@ -115,11 +114,13 @@
     "plt.figure(0)\n",
     "\n",
     "# Assign the corresponding values to the following variables\n",
-    "b = 1e-2\n",
-    "L = 1\n",
-    "n = 10\n",
-    "dt = 0.001\n",
-    "tf = 5"
+    "b =\n",
+    "L = \n",
+    "n = \n",
+    "dt = \n",
+    "tf =\n",
+    "\n",
+    "diffusion(b, L, n, dt, tf)"
    ]
   },
   {
@@ -174,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
