--- a/notebooks/Burgers.ipynb
+++ b/notebooks/Burgers.ipynb
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a matplotlib figure and add labels to each axis. Plots will appear in this figure. A warning may appear under the figure since no labels have been created. \n",
+    "Create a matplotlib figure and add labels to each axis. Plots will appear in this figure.\n",
     "\n",
     "**Note**: You can always run this cell again to clear the figure."
    ]
@@ -87,8 +87,7 @@
    "source": [
     "plt.figure(0)\n",
     "plt.xlabel('$x$')\n",
-    "plt.ylabel('$u(x,t)$')\n",
-    "plt.legend()"
+    "plt.ylabel('$u(x,t)$')"
    ]
   },
   {
@@ -156,8 +155,7 @@
    "source": [
     "plt.figure(1)\n",
     "plt.xlabel('$x$')\n",
-    "plt.ylabel('$u(x,t)$')\n",
-    "plt.legend()"
+    "plt.ylabel('$u(x,t)$')"
    ]
   },
   {
@@ -186,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
